# ObjViewer

./: CMakeLists.txt  README.md  Tool.cpp  Tool.h  Utility.cpp  Utility.h  main.cpp  main.h
Face/: Face.cpp  Face.h
Object/: Object.cpp  Object.h
Object/Transform/: Transform.cpp  Transform.h
Quaternion/: Quaternion.cpp  Quaternion.h
SphCoor/: SphCoor.cpp  SphCoor.h
Vector/: Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Vertex/: Vertex2.cpp  Vertex2.h  Vertex3.cpp  Vertex3.h
